src/test/resources/scripts/language/parser/invalid/coercion/arithmetic/notFunction.sbsc
// this function returns type BOOL, we should not be able to NOT it

!(a: bool): bool -> a;

return false;